This commit resolves the major issues with code highlighting, text formatting, and color consistency while modernizing the overall site appearance and maintaining Jekyll/GitHub Pages compatibility.

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,16 @@ url: "https://marcospaterson.github.io" # the base hostname & protocol for your 
 
 # Build settings
 markdown: kramdown
-highlighter: rouge
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    default_lang: text
+    css_class: 'highlight'
+    span:
+      line_numbers: false
+    block:
+      line_numbers: true
 sass:
   style: compressed
 plugins:
