--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11"
+  },
+  "dependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
