Complete Google Analytics implementation with privacy-first approach
- Add Google Analytics include with privacy settings (anonymize IP, disable ad features)
- Create comprehensive privacy policy page
- Add testing script for validation with automated checks
- Include analytics info component for transparency
- Fix Liquid syntax error in TimescaleDB blog post (Docker template syntax)
- Create new blog post about the implementation process
- GDPR-compliant implementation ready for production

--- a/_config.production.yml
+++ b/_config.production.yml
@@ -15,7 +15,12 @@ profile: false
 strict_front_matter: true
 
 # Analytics and tracking (uncomment when ready)
-# google_analytics: YOUR_GA_ID
+google_analytics: G-TRZ85JG6LN
+analytics:
+  provider: "google-gtag"
+  google:
+    tracking_id: "G-TRZ85JG6LN"  # Same as above
+    anonymize_ip: true
 
 # Production-specific plugins
 plugins:
@@ -23,11 +28,16 @@ plugins:
   - jekyll-sitemap
 
 # SEO and social sharing (optional future enhancements)
-# social:
-#   name: Marcos Paterson
-#   links:
-#     - https://github.com/marcospaterson
-#     - https://linkedin.com/in/marcospaterson
+author:
+  name: Marcos Paterson
+  bio: Quant Developer and Tech Enthusiast
+  email: marcos.paterson@gmail.com
+
+social:
+  name: Marcos Paterson
+  links:
+    - https://github.com/marcospaterson
+    - https://linkedin.com/in/marcospaterson
 
 # Additional exclusions for production
 exclude:
